Added basic design

--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -14,23 +14,35 @@
   h4,
   h5,
   h6 {
-    @apply my-4 font-head [&>:not(:first-child)]:pt-8;
+    @apply my-4 font-head font-semibold text-black [&>:not(:first-child)]:pt-8;
   }
 
   h1 {
-    @apply text-4xl font-bold;
+    @apply text-4xl;
   }
 
   h2 {
-    @apply text-2xl font-bold;
+    @apply text-2xl;
   }
 
   h3 {
-    @apply text-xl font-bold;
+    @apply text-xl;
   }
 
   p {
     @apply mb-4 text-base;
+  }
+
+  a {
+    @apply font-light text-purple-500;
+  }
+
+  nav a {
+    @apply border-b-2 border-transparent py-2 transition-colors duration-200 hover:border-purple-900 hover:text-purple-900;
+  }
+
+  a[aria-current='page'] {
+    @apply border-purple-500;
   }
 }
 @layer components {
