Added footer and styles to stick it at the bottom of the page

--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -4,8 +4,13 @@
 
 @layer base {
   html,
-  body {
-    @apply h-auto min-h-screen font-body;
+  body,
+  div#__nuxt {
+    @apply flex h-auto min-h-screen flex-col font-body;
+  }
+
+  main {
+    @apply flex-grow;
   }
 
   h1,
